// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MapError /> applies class when isMinimised is truthy 1`] = `
<div>
  <div
    class="mx_MapError test mx_MapError_isMinimised"
    data-testid="map-rendering-error"
  >
    <div
      class="mx_MapError_icon"
    />
    <h3
      class="mx_Heading_h3 mx_MapError_heading"
    >
      Unable to load map
    </h3>
    <p
      class="mx_MapError_message"
    >
      This homeserver is not configured to display maps.
    </p>
    <button
      class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary"
      role="button"
      tabindex="0"
    >
      OK
    </button>
  </div>
</div>
`;

exports[`<MapError /> renders correctly for MapStyleUrlNotConfigured 1`] = `
<div>
  <div
    class="mx_MapError test"
    data-testid="map-rendering-error"
  >
    <div
      class="mx_MapError_icon"
    />
    <h3
      class="mx_Heading_h3 mx_MapError_heading"
    >
      Unable to load map
    </h3>
    <p
      class="mx_MapError_message"
    >
      This homeserver is not configured to display maps.
    </p>
    <button
      class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary"
      role="button"
      tabindex="0"
    >
      OK
    </button>
  </div>
</div>
`;

exports[`<MapError /> renders correctly for MapStyleUrlNotReachable 1`] = `
<div>
  <div
    class="mx_MapError test"
    data-testid="map-rendering-error"
  >
    <div
      class="mx_MapError_icon"
    />
    <h3
      class="mx_Heading_h3 mx_MapError_heading"
    >
      Unable to load map
    </h3>
    <p
      class="mx_MapError_message"
    >
      This homeserver is not configured correctly to display maps, or the configured map server may be unreachable.
    </p>
    <button
      class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary"
      role="button"
      tabindex="0"
    >
      OK
    </button>
  </div>
</div>
`;
